--- a/Assets/CameraShakeManager/package.json
+++ b/Assets/CameraShakeManager/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "com.[organization-name].[package-name]",
+  "name": "com.supremepanda.camera_shake_manager",
   "version": "1.0.0",
-  "displayName": "Display Name",
-  "description": "Description",
+  "displayName": "Camera Shake Manager",
+  "description": "Easy to use Camera Shake Manager via Cinemachine.",
   "unity": "2019.1",
   "unityRelease": "0b5",
   "licensesUrl": "License url",
   "documentationUrl": "Documentation url",
   "dependencies": {
+    "com.unity.cinemachine": "2.9.7"
  },
  "keywords": [
-    "key1",
-    "key2",
-    "key3",
-    "key4"
+    "camera-shake",
+    "camera",
+    "cinemachine",
+    "unity-tool"
   ],
  "samples": [
     {
@@ -24,7 +25,7 @@
  ],
   "author": {
     "name": "Furkan Baldır",
-    "email": "furkanbaldir13@gmail.com",
+    "email": "furkanbaldirdev@gmail.com",
     "url": "https://github.com/supremepanda"
   }
 }
